work with swiper

--- a/source/index.html
+++ b/source/index.html
@@ -70,10 +70,10 @@
 
     <!-- Product slider -->
 
-    <section class="main__product product">
-      <h2 class="visually-hidden">Новинки магазина</h2>
-      <ul class="product__list">
-        <li class="product__item product-item product-item--first">
+    <section class="main__product product swiper">
+      <!-- <h2 class="visually-hidden">Новинки магазина</h2> -->
+      <ul class="product__list swiper-wrapper">
+        <li class="product__item product-item product-item--first swiper-slide">
           <div class="product-item__container">
             <div class="product-item__image-wrapper">
               <picture>
@@ -104,65 +104,68 @@
             </div>
           </div>
         </li>
-        <!-- <li class="product__item product-item product-item--second">
-          <picture>
-            <source media="(min-width: 1440px)"
-              srcset="./img/slider-2-desktop@1x.webp 1x, ./img/slider-2-desktop@2x.webp 2x">
-            <source media="(min-width: 768px)"
-              srcset="./img/slider-2-tablet@1x.webp 1x, ./img/slider-2-tablet@2x.webp 2x">
-            <source media="(min-width: 320px)"
-              srcset="./img/slider-2-mobile@1x.webp 1x, ./img/slider-2-mobile@2x.webp 2x">
-            <source media="(min-width: 1440px)"
-              srcset="./img/slider-2-desktop@1x.png 1x, ./img/slider-2-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="./img/slider-2-tablet@1x.png 1x, ./img/slider-2-tablet@2x.png 2x">
-            <img class="product-item__image" src="./img/slider-2-mobile@1x.png"
-              srcset="./img/slider-2-mobile@1x.png 1x, ./img/slider-2-mobile@2x.png 2x"
-              alt="Лавандовый латте в фиолетовой баночке.">
-          </picture>
-          <b class="product-item__new text-features">Новинка!</b>
-          <h3 class="product-item__title">Лавандовый Латте</h3>
-          <p class="product-item__description">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и
-            лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
-          <div class="product-item__wrapper">
-            <span class="product-item__old-price">285₽</span>
-            <span class="product-item__new-price">265₽</span>
-            <button class="product-item__button button button--primary" type="button">Заказать</button>
+        <li class="product__item product-item product-item--second swiper-slide">
+          <div class="product-item__container">
+            <div class="product-item__image-wrapper">
+              <picture>
+                <source media="(min-width: 1440px)"
+                  srcset="./img/slider-2-desktop@1x.webp 1x, ./img/slider-2-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)"
+                  srcset="./img/slider-2-tablet@1x.webp 1x, ./img/slider-2-tablet@2x.webp 2x">
+                <source media="(min-width: 320px)"
+                  srcset="./img/slider-2-mobile@1x.webp 1x, ./img/slider-2-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                  srcset="./img/slider-2-desktop@1x.png 1x, ./img/slider-2-desktop@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="./img/slider-2-tablet@1x.png 1x, ./img/slider-2-tablet@2x.png 2x">
+                <img class="product-item__image" src="./img/slider-2-mobile@1x.png"
+                  srcset="./img/slider-2-mobile@1x.png 1x, ./img/slider-2-mobile@2x.png 2x"
+                  alt="Лавандовый латте в фиолетовой баночке.">
+              </picture>
+            </div>
+            <b class="product-item__new text-features">Новинка!</b>
+            <h3 class="product-item__title">Лавандовый Латте</h3>
+            <p class="product-item__description">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и
+              лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
+            <div class="product-item__wrapper">
+              <span class="product-item__old-price">285₽</span>
+              <span class="product-item__new-price">265₽</span>
+              <button class="product-item__button button button--primary" type="button">Заказать</button>
+            </div>
           </div>
         </li>
-        <li class="product__item product-item product-item--third">
-          <picture>
-            <source media="(min-width: 1440px)"
-              srcset="./img/slider-3-desktop@1x.webp 1x, ./img/slider-3-desktop@2x.webp 2x">
-            <source media="(min-width: 768px)"
-              srcset="./img/slider-3-tablet@1x.webp 1x, ./img/slider-3-tablet@2x.webp 2x">
-            <source media="(min-width: 320px)"
-              srcset="./img/slider-3-mobile@1x.webp 1x, ./img/slider-3-mobile@2x.webp 2x">
-            <source media="(min-width: 1440px)"
-              srcset="./img/slider-3-desktop@1x.png 1x, ./img/slider-3-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="./img/slider-3-tablet@1x.png 1x, ./img/slider-3-tablet@2x.png 2x">
-            <img class="product-item__image" src="./img/slider-3-mobile@1x.png"
-              srcset="./img/slider-3-mobile@1x.png 1x, ./img/slider-3-mobile@2x.png 2x"
-              alt="Тройной Эспрессо в черной баночке.">
-          </picture>
-          <b class="product-item__new text-features">Новинка!</b>
-          <h3 class="product-item__title">Тройной Эспрессо</h3>
-          <p class="product-item__description">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо
-            из Колумбии покажет вам, что такое настоящая бодрость</p>
-          <div class="product-item__wrapper">
-            <span class="product-item__old-price">395₽</span>
-            <span class="product-item__new-price">375₽</span>
-            <button class="product-item__button button button--primary" type="button">Заказать</button>
+        <li class="product__item product-item product-item--third ">
+          <div class="product-item__container">
+            <div class="product-item__image-wrapper">
+              <picture>
+                <source media="(min-width: 1440px)"
+                  srcset="./img/slider-3-desktop@1x.webp 1x, ./img/slider-3-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)"
+                  srcset="./img/slider-3-tablet@1x.webp 1x, ./img/slider-3-tablet@2x.webp 2x">
+                <source media="(min-width: 320px)"
+                  srcset="./img/slider-3-mobile@1x.webp 1x, ./img/slider-3-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                  srcset="./img/slider-3-desktop@1x.png 1x, ./img/slider-3-desktop@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="./img/slider-3-tablet@1x.png 1x, ./img/slider-3-tablet@2x.png 2x">
+                <img class="product-item__image" src="./img/slider-3-mobile@1x.png"
+                  srcset="./img/slider-3-mobile@1x.png 1x, ./img/slider-3-mobile@2x.png 2x"
+                  alt="Тройной Эспрессо в черной баночке.">
+              </picture>
+            </div>
+            <b class="product-item__new text-features">Новинка!</b>
+            <h3 class="product-item__title">Тройной Эспрессо</h3>
+            <p class="product-item__description">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной
+              эспрессо
+              из Колумбии покажет вам, что такое настоящая бодрость</p>
+            <div class="product-item__wrapper">
+              <span class="product-item__old-price">395₽</span>
+              <span class="product-item__new-price">375₽</span>
+              <button class="product-item__button button button--primary" type="button">Заказать</button>
+            </div>
           </div>
-        </li> -->
+        </li>
       </ul>
-      <button class="product__button-prev button" type="button">
-        <span class="visually-hidden">Предыдущий слайд</span>
-      </button>
-      <button class="product__button-next button" type="button">
-        <span class="visually-hidden">Следующий слайд</span>
-      </button>
       <ul class="product__pagination-list">
         <li class="product__pagination-item">
           <button class="product__pagination-button product__pagination-button--current button" type="button">
@@ -180,6 +183,12 @@
           </button>
         </li>
       </ul>
+      <button class="product__button-prev button" type="button">
+        <span class="visually-hidden">Предыдущий слайд</span>
+      </button>
+      <button class="product__button-next button" type="button">
+        <span class="visually-hidden">Следующий слайд</span>
+      </button>
     </section>
 
     <!-- Features -->
@@ -532,7 +541,8 @@
     </a>
   </footer>
 
-  <script src="./js/script.js" type="module" defer></script>
+  <script src="./vendor/swiper/swiper-bundle.js"></script>
+  <script src="./js/script.js" type="module"></script>
 </body>
 
 </html>
