--- a/source/index.html
+++ b/source/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <title>Интернет-магазин кофейных напитков Drink to go</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="vendor/leaflet/leaflet.css">
+  <link rel="stylesheet" href="vendor/swiper/swiper-bundle.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="vendor/leaflet/leaflet.css"  type="text/css">
-  <link rel="stylesheet" href="vendor/swiper/swiper-bundle.css" type="text/css">
 </head>
 
 <body class="page__body">
@@ -75,7 +75,7 @@
     <section class="main__product product swiper">
       <!-- <h2 class="visually-hidden">Новинки магазина</h2> -->
       <ul class="product__list swiper-wrapper">
-        <li class="product__item product-item product-item--first swiper-slide">
+        <li class="product-item product-item--first swiper-slide">
           <div class="product-item__container">
             <div class="product-item__image-wrapper">
               <picture>
@@ -106,7 +106,7 @@
             </div>
           </div>
         </li>
-        <li class="product__item product-item product-item--second swiper-slide">
+        <li class="product-item product-item--second swiper-slide">
           <div class="product-item__container">
             <div class="product-item__image-wrapper">
               <picture>
@@ -136,7 +136,7 @@
             </div>
           </div>
         </li>
-        <li class="product__item product-item product-item--third swiper-slide">
+        <li class="product-item product-item--third swiper-slide">
           <div class="product-item__container">
             <div class="product-item__image-wrapper">
               <picture>
@@ -168,27 +168,11 @@
           </div>
         </li>
       </ul>
-      <ul class="product__pagination-list swiper-pagination">
-        <li class="product__pagination-item">
-          <button class="product__pagination-button product__pagination-button--current button" type="button">
-            <span class="visually-hidden">Первый слайд</span>
-          </button>
-        </li>
-        <li class="product__pagination-item">
-          <button class="product__pagination-button button" type="button">
-            <span class="visually-hidden">Второй слайд</span>
-          </button>
-        </li>
-        <li class="product__pagination-item">
-          <button class="product__pagination-button button" type="button">
-            <span class="visually-hidden">Третий слайд</span>
-          </button>
-        </li>
-      </ul>
-      <button class="product__button-prev button" type="button">
+      <div class="swiper-pagination"></div>
+      <button class="swiper-button-prev button" type="button">
         <span class="visually-hidden">Предыдущий слайд</span>
       </button>
-      <button class="product__button-next button" type="button">
+      <button class="swiper-button-next button" type="button">
         <span class="visually-hidden">Следующий слайд</span>
       </button>
     </section>
