--- a/source/index.html
+++ b/source/index.html
@@ -427,7 +427,7 @@
 
     <section class="main__map map">
       <h2 class="visually-hidden">Карта</h2>
-      <div class="map__canvas" id="map__canvas" width="100" height="100"></div>
+      <div class="map__canvas" id="map__canvas"></div>
       <picture>
         <source media="(min-width: 1440px)" srcset="./img/map-desktop@1x.webp 1x, ./img/map-desktop@2x.webp 2x">
         <source media="(min-width: 768px)" srcset="./img/map-tablet@1x.webp 1x, ./img/map-tablet@2x.webp 2x">
