--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="vendor/leaflet/leaflet.css">
   <link rel="stylesheet" href="vendor/swiper/swiper-bundle.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preload" href="./fonts/montserrat-regular.woff" as="font">
+  <link rel="preload" href="./fonts/montserrat-bold.woff" as="font">
+  <link rel="preload" href="./fonts/montserrat-medium.woff" as="font">
+  <link rel="preload" href="./fonts/montserrat-semibold.woff" as="font">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./img/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page__body">
