--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="vendor/leaflet/leaflet.css">
   <link rel="stylesheet" href="vendor/swiper/swiper-bundle.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preload" href="./fonts/montserrat-regular.woff" as="font">
-  <link rel="preload" href="./fonts/montserrat-bold.woff" as="font">
-  <link rel="preload" href="./fonts/montserrat-medium.woff" as="font">
-  <link rel="preload" href="./fonts/montserrat-semibold.woff" as="font">
+  <link rel="preload" href="./fonts/montserrat-regular.woff2" as="font">
+  <link rel="preload" href="./fonts/montserrat-bold.woff2" as="font">
+  <link rel="preload" href="./fonts/montserrat-medium.woff2" as="font">
+  <link rel="preload" href="./fonts/montserrat-semibold.woff2" as="font">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./img/favicons/apple.png">
@@ -81,7 +81,7 @@
     <!-- Product slider -->
 
     <section class="main__product product swiper">
-      <!-- <h2 class="visually-hidden">Новинки магазина</h2> -->
+      <h2 class="visually-hidden">Новинки магазина</h2>
       <ul class="product__list swiper-wrapper">
         <li class="product-item product-item--first swiper-slide">
           <div class="product-item__container">
@@ -99,7 +99,7 @@
                   srcset="./img/slider-1-tablet@1x.png 1x, ./img/slider-1-tablet@2x.png 2x">
                 <img class="product-item__image" src="./img/slider-1-mobile@1x.png"
                   srcset="./img/slider-1-mobile@1x.png 1x, ./img/slider-1-mobile@2x.png 2x"
-                  alt="Декаф Флэт Уайт в бежевой баночке.">
+                  alt="Декаф Флэт Уайт в бежевой баночке." width="280" height="280">
               </picture>
             </div>
             <b class="product-item__new text-features">Новинка!</b>
@@ -130,7 +130,7 @@
                   srcset="./img/slider-2-tablet@1x.png 1x, ./img/slider-2-tablet@2x.png 2x">
                 <img class="product-item__image" src="./img/slider-2-mobile@1x.png"
                   srcset="./img/slider-2-mobile@1x.png 1x, ./img/slider-2-mobile@2x.png 2x"
-                  alt="Лавандовый латте в фиолетовой баночке.">
+                  alt="Лавандовый латте в фиолетовой баночке." width="280" height="280">
               </picture>
             </div>
             <b class="product-item__new text-features">Новинка!</b>
@@ -160,7 +160,7 @@
                   srcset="./img/slider-3-tablet@1x.png 1x, ./img/slider-3-tablet@2x.png 2x">
                 <img class="product-item__image" src="./img/slider-3-mobile@1x.png"
                   srcset="./img/slider-3-mobile@1x.png 1x, ./img/slider-3-mobile@2x.png 2x"
-                  alt="Тройной Эспрессо в черной баночке.">
+                  alt="Тройной Эспрессо в черной баночке." width="280" height="280">
               </picture>
             </div>
             <b class="product-item__new text-features">Новинка!</b>
@@ -337,7 +337,7 @@
           <a class="catalog-list__link link" href="#">
             <img class="catalog-list__image" src="./img/catalog-1@1x.jpg"
               srcset="./img/catalog-1@1x.jpg.png 1x, ./img/catalog-1@2x.jpg 2x"
-              alt="Декаф Флэт Уайт в бежевой баночке.">
+              alt="Декаф Флэт Уайт в бежевой баночке." width="130" height="188">
             <h3 class="catalog-list__title">Декаф Флэт Уайт</h3>
             <p class="catalog-list__description">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
           </a>
@@ -349,7 +349,7 @@
         <li class="catalog-list__item">
           <a class="catalog-list__link link" href="#">
             <img class="catalog-list__image" src="./img/catalog-2@1x.jpg"
-              srcset="./img/catalog-2@1x.jpg 1x, ./img/catalog-2@2x.jpg 2x" alt="Декаф Флэт Уайт в фиолетовой баночке.">
+              srcset="./img/catalog-2@1x.jpg 1x, ./img/catalog-2@2x.jpg 2x" alt="Декаф Флэт Уайт в фиолетовой баночке." width="130" height="188">
             <h3 class="catalog-list__title">Декаф Флэт Уайт</h3>
             <p class="catalog-list__description">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
           </a>
@@ -361,7 +361,7 @@
         <li class="catalog-list__item">
           <a class="catalog-list__link link" href="#">
             <img class="catalog-list__image" src="./img/catalog-3@1x.jpg"
-              srcset="./img/catalog-3@1x.jpg 1x, ./img/catalog-3@2x.jpg 2x" alt="Декаф Флэт Уайт в черной баночке.">
+              srcset="./img/catalog-3@1x.jpg 1x, ./img/catalog-3@2x.jpg 2x" alt="Декаф Флэт Уайт в черной баночке." width="130" height="188">
             <h3 class="catalog-list__title">Декаф Флэт Уайт</h3>
             <p class="catalog-list__description">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
           </a>
@@ -373,7 +373,7 @@
         <li class="catalog-list__item">
           <a class="catalog-list__link link" href="#">
             <img class="catalog-list__image" src="./img/catalog-4@1x.jpg"
-              srcset="./img/catalog-4@1x.jpg 1x, ./img/catalog-4@2x.jpg 2x" alt="Декаф Флэт Уайт в розовой баночке.">
+              srcset="./img/catalog-4@1x.jpg 1x, ./img/catalog-4@2x.jpg 2x" alt="Декаф Флэт Уайт в розовой баночке." width="130" height="188">
             <h3 class="catalog-list__title">Декаф Флэт Уайт</h3>
             <p class="catalog-list__description">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
           </a>
@@ -385,7 +385,7 @@
         <li class="catalog-list__item">
           <a class="catalog-list__link link" href="#">
             <img class="catalog-list__image" src="./img/catalog-5@1x.jpg"
-              srcset="./img/catalog-5@1x.jpg 1x, ./img/catalog-5@2x.jpg 2x" alt="Декаф Флэт Уайт в коричневой баночке.">
+              srcset="./img/catalog-5@1x.jpg 1x, ./img/catalog-5@2x.jpg 2x" alt="Декаф Флэт Уайт в коричневой баночке." width="130" height="188">
             <h3 class="catalog-list__title">Декаф Флэт Уайт</h3>
             <p class="catalog-list__description">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
           </a>
@@ -397,7 +397,7 @@
         <li class="catalog-list__item">
           <a class="catalog-list__link link" href="#">
             <img class="catalog-list__image" src="./img/catalog-6@1x.jpg"
-              srcset="./img/catalog-6@1x.jpg 1x, ./img/catalog-6@2x.jpg 2x" alt="Декаф Флэт Уайт в желтой баночке.">
+              srcset="./img/catalog-6@1x.jpg 1x, ./img/catalog-6@2x.jpg 2x" alt="Декаф Флэт Уайт в желтой баночке." width="130" height="188">
             <h3 class="catalog-list__title">Декаф Флэт Уайт</h3>
             <p class="catalog-list__description">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
           </a>
@@ -456,7 +456,7 @@
       <a class="footer__logo-link link" href="#">
         <picture>
           <source media="(min-width: 768px)" srcset="./img/logo-long.svg">
-          <img class="footer__logo-image" src="./img/logo-short.svg" alt="Логотип магазина Drink to go.">
+          <img class="footer__logo-image" src="./img/logo-short.svg" alt="Логотип магазина Drink to go." width="82" height="36">
         </picture>
       </a>
       <span class="footer__description">Интернет-магазин кофейных напитков</span>
